--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,9 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <a href="/public/labs/a1/index.html">a1</a><br />
+    <a href="/public/labs/a2/index.html">a2</a><br />
+    <a href="/public/kanbas/index.html">kanbas</a>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
