--- a/public/kanbas/course/home.html
+++ b/public/kanbas/course/home.html
@@ -86,7 +86,7 @@
           <div style="display: flex">
             <nav
               class="d-none d-sm-block"
-              style="--bs-breadcrumb-divider: '>'"
+              style="--bs-breadcrumb-divider: &quot;>&quot;"
               aria-label="breadcrumb"
             >
               <ol class="breadcrumb">
@@ -106,7 +106,7 @@
             <div class="col" style="color: white; text-align: center">
               CS5610<br />Home
             </div>
-           <div class="col-1" style="color: white; text-align: right">
+            <div class="col-1" style="color: white; text-align: right">
               <a
                 style="color: white"
                 href="#collapseCourse"
