--- a/public/kanbas/course/grades.html
+++ b/public/kanbas/course/grades.html
@@ -86,7 +86,7 @@
           <div style="display: flex">
             <nav
               class="d-none d-sm-block"
-              style="--bs-breadcrumb-divider: '>'"
+              style="--bs-breadcrumb-divider: &quot;>&quot;"
               aria-label="breadcrumb"
             >
               <ol class="breadcrumb">
