--- a/public/kanbas/course/settings/index.html
+++ b/public/kanbas/course/settings/index.html
@@ -1,13 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-  <script>
-    setTimeout(function() {
-      window.location.href = "course-detail.html"; 
-    }, 1); 
-  </script>
-</head>
-<body>
-
-</body>
+  <head>
+    <script>
+      setTimeout(function () {
+        window.location.href = "course-detail.html";
+      }, 1);
+    </script>
+  </head>
+  <body></body>
 </html>
