--- a/public/kanbas/course/settings/navigation.html
+++ b/public/kanbas/course/settings/navigation.html
@@ -87,7 +87,7 @@
           <div style="display: flex">
             <nav
               class="d-none d-sm-block"
-              style="--bs-breadcrumb-divider: '>'"
+              style="--bs-breadcrumb-divider: &quot;>&quot;"
               aria-label="breadcrumb"
             >
               <ol class="breadcrumb">
